Display message about included prices on flat configuration pages

--- a/locales/en.json
+++ b/locales/en.json
@@ -214,7 +214,8 @@
     "YouCanSelectMultipe": "You can select multiple",
     "YourChosenFlat": "Your chosen flat",
     "FlatPagesTitle": "Choose your desire %s",
-    "appliancesPageSubtitle": "Select the desired appliances",
+    "appliancesPageSubtitle": "Appliances price is not included in the price of the apartment and its choice is optional",
+    "flatPagesSubtitle": "%s price is not included in the price of the apartment and its choice is optional",
     "flatPagesModal": "Do you want to save this apartment?",
     "FavouriteFlats": "Favourite Flats",
     "PleaseSelectBlockFromRender": "Please select block",
