--- a/locales/ka.json
+++ b/locales/ka.json
@@ -225,7 +225,7 @@
     "FrequentlyAskedQuestions": "ხშირად დასმული კითხვები",
     "ModelIndexPage": "ბინის შერჩევა იწყება აქ!",
     "FlatPagesTitle": "აირჩიე შენთვის სასურველი %s",
-    "appliancesPageSubtitle": "ტექნიკის ფასი არ შედის ბინის ფასში და მისი არჩევა არასავალდებულოა",
+    "renovationPageSubtitle": "რემონტის ფასი შედის ბინის ფასში და მისი არჩევა სავალდებულოა",
     "flatPagesSubtitle": "%sს ფასი არ შედის ბინის ფასში და მისი არჩევა არასავალდებულოა",
     "flatPagesModal": "გსურთ ამ ბინის შენახვა?"
   },
