Fix: Edit waiting page text

--- a/locales/en.json
+++ b/locales/en.json
@@ -179,7 +179,7 @@
     "ApproximateWaitingTime": "Estimated waiting time %s minutes",
     "DetailsAsPdf": "Details as PDF",
     "CancelSalesRequest": "Cancel Sales Call",
-    "WaitForSalesOrRequestInfo": "Call for sales managers or ask for details on email",
+    "WaitForSalesOrRequestInfo": "Wait for sales manager",
     "flat_count_chosen_by_you": "Number of your chosen flats",
     "entrance": "entrance",
     "projects": "projects",
