fixed some visual bugs

--- a/locales/en.json
+++ b/locales/en.json
@@ -199,6 +199,10 @@
     "ChooseYourSearchingMethod": "Choose your searching method",
     "FillInPhoneNumber": "FILL IN YOUR PHONE NUMBER",
     "IAmLookingFor": "I AM LOOKING FOR",
+    "total_area": "TOTAL AREA",
+    "flat_area": "FLAT AREA",
+    "balcony_area": "BALCONY/TERRACE",
+    "balcony_area_slash_terrace": "BALCONY/TERRACE",
     "YouCanSelectOnlyOne": "You can select only one",
     "FillInPhoneNumberSubTitle": "Fill in phone number with already registered phone",
     "FlatPageTitleMuscat": "DESIGN MUSCAT",
