--- a/locales/ka.json
+++ b/locales/ka.json
@@ -194,6 +194,10 @@
     "CodeHasBeenSent": "შეიყვანეთ 4 ნიშნა კოდი",
     "CodeHasBeenSentSubTitle": "4 ნიშნა კოდი გამოგაზვნილია მითითებულ ტელეფონის ნომერზე",
     "FavouriteFlats": "შერჩეული ბინები",
+    "total_area": "სრული ფართი",
+    "flat_area": "საცხოვრებელი",
+    "balcony_area": "ვერანდა",
+    "balcony_area_slash_terrace": "ვერანდა/ტერასა",
     "ChooseYourSearchingMethod": "აირჩიე სასურველი ძიების მეთოდი",
     "PleaseSelectBlockFromRender": "გთხოვთ აირჩიოთ სასურველი ბლოკი",
     "PleaseSelectFloorFromRender": "გთხოვთ აირჩიოთ სასურველი სართული",
