--- a/locales/ka.json
+++ b/locales/ka.json
@@ -249,7 +249,8 @@
     "failedReservation": "თქვენ მიერ შერჩეული ბინის დაჯავშნა ვერ მოხერხდა",
     "aboutFilterTitle": "ფილტრების შესახებ",
     "aboutFilterDesc": "აღნიშნული ფილტრის მონიშვნით, ჩვენ წინასწარ შემოგთავაზებთ რეკომენდებულ ფილტრებს, რომლის ცვლილება თქვენც შეგიძლიათ",
-    "ok": "გასაგებია"
+    "ok": "გასაგებია",
+    "favouritesPageModal": "ნამდვილად გსურთ ამ ბინის წაშლა?"
   },
   "rooms": {
     "Hall": "ჰოლი",
