Fix: Display email field error during registration

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -20,6 +20,7 @@
     "NoFlatsInThisAreaRange": "მითითებულ ფართში ბინა არ მოიძებნა, გთხოვთ, მიუთითოთ ახალი ფართის დიაპაზონი",
     "NoFlatsInThisPriceRange": "მითითებულ ფასში ბინა არ მოიძებნა, გთხოვთ, მიუთითოთ ახალი ფასის დიაპაზონი",
     "PhoneAlreadyRegistered": "მითითებული ნომერი უკვე დარეგისტრირებულია",
+    "EmailAlreadyRegistered": "მითითებული იმეილი უკვე დარეგისტრირებულია",
     "NoFlatsInThisFloorRange": "მითითებულ ფასში ბინა არ მოიძებნა, გთხოვთ, მიუთითოთ ახალი სართულის დიაპაზონი",
     "NameFieldIsRequired": "სახელის ველი აუცილებელია",
     "NoItemsInYourFavourites": "თქვენ ფავორიტებში არ გაქვთ დამატებული არცერთი ბინა",
