--- a/locales/en.json
+++ b/locales/en.json
@@ -21,6 +21,7 @@
     "NameFieldIsRequired": "Name field is required",
     "PhoneAlreadyRegistered": "Phone number is already registered",
     "PhoneFieldIsRequired": "Phone Number field is required and must be numeric value",
+    "PhoneOnlyFieldIsRequired": "Phone Number field is required and must be numeric value",
     "emailIsNotValid": "Email field is required and must be correct format",
     "CodeFieldIsRequired": "Code field is required",
     "NoItemsInYourFavourites": "No flats in your favourite list",
@@ -140,9 +141,9 @@
     "Decor": "Decoration",
     "decoration": "Decoration",
     "Supply": "Supply",
-    "Render": "Render",
-    "Plan": "Plan",
-    "FloorPlan": "Floor Plan",
+    "Render": "RENDER",
+    "Plan": "PLAN",
+    "FloorPlan": "FLOOR PLAN",
     "appliances": "Appliances",
     "furniture": "Furniture",
     "bedrooms": "Bedrooms",
@@ -169,7 +170,7 @@
     "ByFilter": "Search By Filter",
     "ByRender": "Search By Project",
     "callSaleManager": "Call the sales manager and book this flat",
-    "saveFlat": "Save this flat",
+    "saveFlat": "SAVE THIS FLAT",
     "dontSaveFlat": "Don't save",
     "chosenAppliances": "Chosen appliances",
     "sold": "sold",
@@ -219,7 +220,7 @@
     "flat-list-result-title": "Flats filtered by your criterea <br><span class=\"color-orange\">Found %s Flats</span>",
     "ModelIndexPage": "Find your new home here!",
     "YouCanSelectMultipe": "You can select multiple",
-    "YourChosenFlat": "Your chosen flat",
+    "YourChosenFlat": "YOUR CHOSEN FLAT",
     "FlatPagesTitle": "Choose your desire %s",
     "renovationPageSubtitle": "Renovation price is included in the price of the apartment and its choice is mandatory",
     "flatPagesSubtitle": "%s price is not included in the price of the apartment and its choice is optional",
