Added locale identificator on send pdf request

--- a/locales/en.json
+++ b/locales/en.json
@@ -38,8 +38,8 @@
     "are_you_sure_question": "Are you sure, that you want to continue with this action ?",
     "continue": "Continue",
     "cancel": "Cancel",
-    "yes": "Yes",
-    "no": "No",
+    "yes": "YES",
+    "no": "NO",
     "please_confirm_email": "Please confirm e-mail",
     "send": "Send",
     "successfulReservation": "Your chosen flat is already booked",
