Sprint 8 changed copies and some minor bugs

--- a/locales/en.json
+++ b/locales/en.json
@@ -10,7 +10,7 @@
   },
   "home": {
     "m3text": "m² presents a new district m³ Saburtalo - a place where every corner is designed for a free, comfortable and diverse life",
-    "m3sub1": "Select the apartment you want, followed by the whole district"
+    "m3sub1": "Select an apartment that comes with a neighborhood"
   },
   "status": {
     "finished": "Finished",
@@ -63,7 +63,7 @@
     "appliance": "APPLIANCE",
     "block": "BLOCK",
     "price": "PRICE",
-    "floor": "FLOOR",
+    "floor": "FLOORS",
     "view": "VIEW",
     "floorPlan": "FLOOR PLAN",
     "IAmLookingFor": "LOOKING FOR",
@@ -118,8 +118,8 @@
     "max": "Max:",
     "floorShort": "Floors",
     "LitUpAll": "LIGHT ALL UP",
-    "pick_multiple": "Pick Multiple Options",
-    "pick_range": "Pick Range",
+    "pick_multiple": "Choose Multiple Options",
+    "pick_range": "Choose Range",
     "for_what_price": "For What Price",
     "what_floor_are_you_looking_for": "On what floor",
     "choose_flat_view": "Choose Flat View",
@@ -129,7 +129,7 @@
     "Furniture": "Furniture",
     "building_progress": "Building progress",
     "LitIt": "LIGHT UP",
-    "floor": "Floor",
+    "floor": "Floors",
     "select_flat_and_lit_it_up": "Select flat and lit it up",
     "select_only_one": "Select only one",
     "number": "Number",
@@ -171,7 +171,7 @@
     "ByFlatNumber": "Search by flat number",
     "ByFilter": "Search By Filter",
     "ByRender": "Search By Project",
-    "callSaleManager": "Call the sales manager and book this flat",
+    "callSaleManager": "Call the sales manager",
     "saveFlat": "SAVE THIS FLAT",
     "dontSaveFlat": "Don't save",
     "chosenAppliances": "Chosen appliances",
@@ -184,7 +184,7 @@
     "DetailsAsPdf": "Details as PDF",
     "CancelSalesRequest": "Cancel Sales Call",
     "WaitForSalesOrRequestInfo": "Wait for sales manager",
-    "flat_count_chosen_by_you": "Number of your chosen flats",
+    "flat_count_chosen_by_you": "Number of flats available in this range",
     "entrance": "entrance",
     "projects": "projects",
     "callSalesQuestion": "Do you really want to call sales?",
@@ -223,7 +223,7 @@
     "ModelIndexPage": "Find your new home here!",
     "YouCanSelectMultipe": "You can select multiple",
     "YourChosenFlat": "YOUR CHOSEN FLAT",
-    "FlatPagesTitle": "Choose your desire %s",
+    "FlatPagesTitle": "CHOOSE YOUR FAVOURITE %s",
     "renovationPageSubtitle": "Renovation price is included in the price of the apartment and its choice is mandatory",
     "flatPagesSubtitle": "%s price is not included in the price of the apartment and its choice is optional",
     "flatPagesModal": "Do you want to save this apartment?",
@@ -237,9 +237,9 @@
     "ChooseSearchOption": "SEARCH OPTIONS",
     "FlatCardSubTitle": "Flat area %sm²",
     "BuildingProgress": "BUILDING STATUS",
-    "PickAreaRange": "PICK AREA RANGE",
-    "PickFloorRange": "PICK FLOOR RANGE",
-    "PickPriceRange": "PICK PRICE RANGE",
+    "PickAreaRange": "CHOOSE AREA RANGE",
+    "PickFloorRange": "CHOOSE FLOOR RANGE",
+    "PickPriceRange": "CHOOSE PRICE RANGE",
     "ChooseProject": "CHOOSE PROJECT",
     "ChooseProjects": "CHOOSE PROJECTS"
   },
