--- a/locales/ka.json
+++ b/locales/ka.json
@@ -46,7 +46,7 @@
     "block": "ბლოკი",
     "floorPlan": "სართულის გეგმა",
     "price": "ფასი",
-    "floor": "სართულები",
+    "floor": "სართული",
     "view": "ხედი",
     "IAmLookingFor": "მე ვეძებ",
     "bedrooms": "საძინებლები",
@@ -61,7 +61,7 @@
     "home": "Home"
   },
   "home": {
-    "m3text": "m2 წარმოდგინეთ ახალ უბანს m3 საბურთალო - ადგილს, სადაც თითოეული კუთხე შექმნილია თავისუფალი, კომფორტული და მრავალფეროვანი ცხოვრებისთვის",
+    "m3text": "m² წარმოდგინეთ ახალ უბანს m³ საბურთალო - ადგილს, სადაც თითოეული კუთხე შექმნილია თავისუფალი, კომფორტული და მრავალფეროვანი ცხოვრებისთვის",
     "m3sub1": "შეარჩიეთ თქვენთვის სასურველი ბინა, რომელსაც მთელი უბანი მოჰყვება"
   },
   "about": {
@@ -83,7 +83,7 @@
     "callSalesManager": "გამოიძახე გაყიდვები",
     "reservationRequest": "ჯავშნის მოთხოვნა",
     "ConfirmPhone": "ავტორიზაცია",
-    "search": "ძებნა",
+    "search": "ძიება",
     "continue": "გაგრძელება",
     "cancelTheCall": "გამოძახების გაუქმება",
     "confirmCallSale": "დიახ",
@@ -173,10 +173,10 @@
     "min": "მინ.",
     "max": "მაქს.",
     "ByPhoneNumber": "ავტორიზაცია ტელეფონის ნომრით",
-    "ByFlatNumber": "ბინის ნომრით ძებნა",
-    "ByFilter": "ფილტრით ძებნა",
-    "ByRender": "პროექტით ძებნა",
-    "callSaleManager": "გამოიძახე გაყიდვების მენეჯერი და დაჯავშნე ეს ბინა",
+    "ByFlatNumber": "ბინის ნომრით ძიება",
+    "ByFilter": "ფილტრით ძიება",
+    "ByRender": "პროექტით ძიება",
+    "callSaleManager": "გამოიძახე გაყიდვების მენეჯერი",
     "saveFlat": "შეინახე ეს ბინა",
     "dontSaveFlat": "არ მსურს შენახვა",
     "chosenAppliances": "შერჩეული ტექნიკა",
@@ -187,14 +187,14 @@
     "forMyBigFamily": "ჩემი დიდი ოჯახისთვის",
     "forYoungFamily": "ახალგაზრდა ოჯახისთვის",
     "forCouple": "წყვილისთვის",
-    "forAlone": "მარტო ერთისთვის"
+    "forAlone": "ერთი ადამიანისთვის"
   },
   "titles": {
     "FlatPageTitleGinger": "რემონტი ჯინჯერი",
-    "IAmLookingFor": "მე ვეძებ ბინას",
+    "IAmLookingFor": "მე ვეძებ ბინას:",
     "not_already_registered": "თუ არ ხართ დარეგისტრირებული",
     "CodeHasBeenSent": "შეიყვანეთ 4 ნიშნა კოდი",
-    "CodeHasBeenSentSubTitle": "4 ნიშნა კოდი გამოგაზვნილია მითითებულ ტელეფონის ნომერზე",
+    "CodeHasBeenSentSubTitle": "4 ნიშნა კოდი გამოგზავნილია მითითებულ ტელეფონის ნომერზე",
     "FavouriteFlats": "შერჩეული ბინები",
     "total_area": "სრული ფართი",
     "flat_area": "საცხოვრებელი",
@@ -206,15 +206,15 @@
     "PleaseSelectFlatFromRender": "გთხოვთ აირჩიოთ სასურველი ბინა",
     "ChooseBedroomCount": "აირჩიეთ საძინებლების რაოდენობა",
     "ChooseFlatType": "აირჩიეთ ბინის ტიპი",
-    "SearchResults": "ძებნის შედეგები",
-    "ChooseSearchOption": "აირჩიეთ ძებნის მეთოდი",
+    "SearchResults": "ძიების შედეგები",
+    "ChooseSearchOption": "აირჩიეთ ძიების მეთოდი",
     "FlatPageTitleCinnamon": "რემონტი დარიჩინი",
     "FlatCardSubTitle": "ბინის საერთო ფართი %s² მეტრი",
     "FillInPhoneNumber": "მიუთითე ტელეფონის ნომერი",
     "BuildingProgress": "მშენებლობის სტატუსი",
-    "PickFloorRange": "აირჩიეთ სართულების დიაპაზონი",
-    "PickPriceRange": "აირჩიეთ ფასების დიაპაზონი",
-    "PickAreaRange": "აირჩიეთ ფართის დიაპაზონი",
+    "PickFloorRange": "სართულის დიაპაზონი",
+    "PickPriceRange": "ფასის დიაპაზონი",
+    "PickAreaRange": "ფართის დიაპაზონი",
     "FillInPhoneNumberSubTitle": "მიუთითე ნომერი, რომელიც უკვე რეგისტრირებულია",
     "FlatPageTitleMuscat": "რემონტი მუსკატი",
     "YouWillRecieveCode": "კოდს მიიღებთ ტელეფონის ნომერზე",
@@ -222,18 +222,19 @@
     "FlatPageTitleVanilla": "რემონტი ვანილი",
     "FillPrivateInformation": "შეავსეთ პირადი ინფორმაცია",
     "FlatPageTitleUlumbo": "რემონტი ულუმბო",
-    "SearchByFlatNumber": "ბინის ნომრით ძებნა",
+    "SearchByFlatNumber": "ბინის ნომრით ძიება",
     "YourChosenFlat": "შენს მიერ შერჩეული ბინა",
-    "ByFlatNumberButtonsTitle": "ან გააგრძელე ძებნა შემდეგი მეთოდებით",
-    "YouCanSelectMultipe": "შეგიძლიათ აირჩიოთ რამოდენიმე",
+    "ByFlatNumberButtonsTitle": "ან გააგრძელე ძიება შემდეგი მეთოდებით",
+    "YouCanSelectMultipe": "შეგიძლიათ აირჩიოთ რამდენიმე",
     "YouCanSelectOnlyOne": "შეგიძლიათ აირჩიოთ მხოლოდ ერთი",
     "ChooseProject": "აირჩიეთ პროქტი",
     "ChooseProjects": "აირჩიეთ პროექტები",
+    "ChooseBlock": "აირჩიეთ ბლოკი",
     "SearchByFlatNumberSubTitle": "ჩაწერეთ თქვენს მიერ შერჩეული ბინის ნომერი",
     "flat-list-result-title": "თქვენს მიერ არჩეული კრიტერიუმების მიხედვით <br><span class=\"color-orange\">მოიძებნა %s ბინა</span>",
     "FrequentlyAskedQuestions": "ხშირად დასმული კითხვები",
     "ModelIndexPage": "ბინის შერჩევა იწყება აქ!",
-    "FlatPagesTitle": "აირჩიე შენთვის სასურველი %s",
+    "FlatPagesTitle": "აირჩიეთ სასურველი %s შემოთავაზებული ვარიანტებიდან",
     "renovationPageSubtitle": "რემონტის ფასი შედის ბინის ფასში და მისი არჩევა სავალდებულოა",
     "flatPagesSubtitle": "%sს ფასი არ შედის ბინის ფასში და მისი არჩევა არასავალდებულოა",
     "flatPagesModal": "გსურთ ამ ბინის შენახვა?"
@@ -250,7 +251,7 @@
     "successfulReservation": "თქვენ მიერ შერჩეული ბინა დაიჯავშნა",
     "failedReservation": "თქვენ მიერ შერჩეული ბინის დაჯავშნა ვერ მოხერხდა",
     "aboutFilterTitle": "ფილტრების შესახებ",
-    "aboutFilterDesc": "აღნიშნული ფილტრის მონიშვნით, ჩვენ წინასწარ შემოგთავაზებთ რეკომენდებულ ფილტრებს, რომლის ცვლილება თქვენც შეგიძლიათ",
+    "aboutFilterDesc": "მონიშნული ფილტრი შევსებულია მ2-ის რეკომენდაციით",
     "ok": "გასაგებია",
     "favouritesPageModal": "ნამდვილად გსურთ ამ ბინის წაშლა?",
     "sentSuccessfully": "თქვენი იმეილი წარმატებით გაიგზავნა"
