chagnged some english copies

--- a/locales/en.json
+++ b/locales/en.json
@@ -63,7 +63,7 @@
     "appliance": "APPLIANCE",
     "block": "BLOCK",
     "price": "PRICE",
-    "floor": "FLOORS",
+    "floor": "FLOOR",
     "view": "VIEW",
     "floorPlan": "FLOOR PLAN",
     "IAmLookingFor": "LOOKING FOR",
@@ -116,7 +116,7 @@
     "BalconyArea": "Balcony Area",
     "min": "Min:",
     "max": "Max:",
-    "floorShort": "Floors",
+    "floorShort": "Floor",
     "LitUpAll": "LIGHT ALL UP",
     "pick_multiple": "Choose Multiple Options",
     "pick_range": "Choose Range",
@@ -129,7 +129,7 @@
     "Furniture": "Furniture",
     "building_progress": "Building progress",
     "LitIt": "LIGHT UP",
-    "floor": "Floors",
+    "floor": "Floor",
     "select_flat_and_lit_it_up": "Select flat and lit it up",
     "select_only_one": "Select only one",
     "number": "Number",
