--- a/locales/en.json
+++ b/locales/en.json
@@ -60,7 +60,7 @@
     "renovation": "RENOVATION",
     "furniture": "FURNITURE",
     "decoration": "DECORATION",
-    "appliance": "APPLIANCE",
+    "appliance": "APPLIANCES",
     "block": "BLOCK",
     "price": "PRICE",
     "floor": "FLOOR",
@@ -87,7 +87,7 @@
     "skip": "skip",
     "faq": "Frequently asked question",
     "CLOSE": "CLOSE",
-    "callSalesManager": "Call the sales",
+    "callSalesManager": "Call the sales manager",
     "reservationRequest": "Request a reservation",
     "select": "select",
     "ConfirmPhone": "login",
@@ -198,6 +198,7 @@
   },
   "titles": {
     "FlatPageTitleGinger": "DESIGN GINGER",
+    "ChooseBlock": "Choose Block",
     "FlatPageTitleCinnamon": "DESIGN CINNAMON",
     "not_already_registered": "If not already registered",
     "ChooseYourSearchingMethod": "Choose your searching method",
