Edit sales main page text

--- a/locales/en.json
+++ b/locales/en.json
@@ -245,7 +245,7 @@
     "ChooseProjects": "CHOOSE PROJECTS"
   },
   "projects": {
-    "m3_gelovani": "m³ Gelovani"
+    "m3_gelovani": "m³ Saburtalo"
   },
   "addresses": {
     "marshal_gelovani": "Marshal Gelovani Avenue",
