--- a/locales/ka.json
+++ b/locales/ka.json
@@ -5,7 +5,7 @@
     "model": "მაკეტის აპლიკაცია"
   },
   "projects": {
-    "m3_gelovani": "m³ გელოვანზე"
+    "m3_gelovani": "m³ საბურთალო"
   },
   "status": {
     "finished": "დასრულებული",
