fixed some bugs

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -251,7 +251,7 @@
     "successfulReservation": "თქვენ მიერ შერჩეული ბინა დაიჯავშნა",
     "failedReservation": "თქვენ მიერ შერჩეული ბინის დაჯავშნა ვერ მოხერხდა",
     "aboutFilterTitle": "ფილტრების შესახებ",
-    "aboutFilterDesc": "მონიშნული ფილტრი შევსებულია მ2-ის რეკომენდაციით",
+    "aboutFilterDesc": "მონიშნული ფილტრი შევსებულია მ²-ის რეკომენდაციით",
     "ok": "გასაგებია",
     "favouritesPageModal": "ნამდვილად გსურთ ამ ბინის წაშლა?",
     "sentSuccessfully": "თქვენი იმეილი წარმატებით გაიგზავნა"
@@ -284,7 +284,7 @@
     "flatPagesModal": "თუ თქვენ ბინას არ დაამატებთ ფავორიტებში ის ავტომატურად დაიკარგება"
   },
   "alerts": {
-    "planshetColorAlert": "ამ ბინის სანახავად მიბრძადით %s სივრცეში %n პლანშეტთან"
+    "planshetColorAlert": "ამ ბინის სანახავად მიბრძადით მაკეტთან %s სივრცეში"
   },
   "colors": {
     "orange": "ნარინჯისფერ",
