fixed some minor issues

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -251,7 +251,7 @@
     "successfulReservation": "თქვენ მიერ შერჩეული ბინა დაიჯავშნა",
     "failedReservation": "თქვენ მიერ შერჩეული ბინის დაჯავშნა ვერ მოხერხდა",
     "aboutFilterTitle": "ფილტრების შესახებ",
-    "aboutFilterDesc": "მონიშნული ფილტრი შევსებულია მ²-ის რეკომენდაციით",
+    "aboutFilterDesc": "მონიშნული ფილტრი შევსებულია m²-ის რეკომენდაციით",
     "ok": "გასაგებია",
     "favouritesPageModal": "ნამდვილად გსურთ ამ ბინის წაშლა?",
     "sentSuccessfully": "თქვენი იმეილი წარმატებით გაიგზავნა"
