fixed minro issues

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -102,12 +102,11 @@
     "FlatsLeftOnThisFloor": "ამ სართულზე დარჩენილია",
     "SeeAllFlatsOnThisFloor": "ამ სართულზე გასაყიდი ყველა ბინა",
     "available": "დარჩენილია",
-    "reserved": "შერჩეულია",
-    "YouCalledForSales": "თქვენ გამოიძახეთ გაყიდვები",
-    "YouAreNumber": "თქვენ რიგში ხართ %s",
+    "reserved": "დაჯავშნილი",
+    "YouCalledForSales": "თქვენ გამოიძახეთ გაყიდვების მენეჯერი",
     "ApproximateWaitingTime": "სავარაუდო ლოდინის დრო %s წუთი",
     "DetailsAsPdf": "დეტალები PDF ვერსიად",
-    "CancelSalesRequest": "გაყიდვების გაუქმება",
+    "CancelSalesRequest": "გამოძახების გაუქმება",
     "WaitForSalesOrRequestInfo": "დაელოდეთ გაყიდვების მენეჯერს",
     "name": "სახელი და გვარი",
     "phone": "ტელეფონის ნომერი",
@@ -180,7 +179,7 @@
     "saveFlat": "შეინახე ეს ბინა",
     "dontSaveFlat": "არ მსურს შენახვა",
     "chosenAppliances": "შერჩეული ტექნიკა",
-    "callSalesQuestion": "ნამდვილად გსურთ გაყიდვების გამოძახება?",
+    "callSalesQuestion": "ნამდვილად გსურთ გაყიდვების მენეჯერის გამოძახება?",
     "saleIsBusy": "თქვენი გაყიდვების მენეჯერი დაკავებულია. გსურთ სხვა მენეჯერის გამოძახება?",
     "acceptedCall": "გაყიდვების მენეჯერი მალე გაგესაუბრებათ",
     "forRent": "გასაქირავებლად",
