--- a/locales/ka.json
+++ b/locales/ka.json
@@ -99,9 +99,9 @@
     "desc": "მაქს-მინ",
     "IsSold": "გაყიდულია",
     "NoFlatsFound": "თქვენს მიერ მოთხოვნილი კატეგორიებით ვერცერთი ბინა ვერ მოიძებნა",
-    "FlatsLeftOnThisFloor": "ამ სართულზე დარჩენილია",
+    "FlatsLeftOnThisFloor": "ამ სართულზე გასაყიდია",
     "SeeAllFlatsOnThisFloor": "ამ სართულზე გასაყიდი ყველა ბინა",
-    "available": "დარჩენილია",
+    "available": "გასაყიდია",
     "reserved": "დაჯავშნილი",
     "YouCalledForSales": "თქვენ გამოიძახეთ გაყიდვების მენეჯერი",
     "ApproximateWaitingTime": "სავარაუდო ლოდინის დრო %s წუთი",
@@ -121,7 +121,7 @@
     "floorShort": "სარ.",
     "ongoing": "მიმდინარე",
     "LitUpAll": "გაანათე ყველა",
-    "FlatsLeftInThisBlock": "ამ ბლოკში დარჩენილია",
+    "FlatsLeftInThisBlock": "ამ ბლოკში გასაყიდია",
     "address": "მისამართი",
     "Renovation": "რემონტი",
     "floor": "სართული",
