--- a/locales/ka.json
+++ b/locales/ka.json
@@ -250,10 +250,12 @@
     "successfulReservation": "თქვენ მიერ შერჩეული ბინა დაიჯავშნა",
     "failedReservation": "თქვენ მიერ შერჩეული ბინის დაჯავშნა ვერ მოხერხდა",
     "aboutFilterTitle": "ფილტრების შესახებ",
-    "aboutFilterDesc": "მონიშნული ფილტრი შევსებულია m²-ის რეკომენდაციით",
+    "aboutFilterDesc": "მონიშნული ფილტრები შევსებულია m2-ის რეკომენდაციით და მათი დაკორექტირება შეგეძლებათ სურვილისამებრ",
     "ok": "გასაგებია",
     "favouritesPageModal": "ნამდვილად გსურთ ამ ბინის წაშლა?",
-    "sentSuccessfully": "თქვენი იმეილი წარმატებით გაიგზავნა"
+    "sentSuccessfully": "თქვენი იმეილი წარმატებით გაიგზავნა",
+    "renovationIsRequiredTitle": "რემონტის შესახებ",
+    "renovationIsRequiredDesc": "რემონტის ღირებულება შედის ბინის ღირებულებაში და მისი შერჩევა სავალდებულოა"
   },
   "rooms": {
     "Hall": "ჰოლი",
