--- a/locales/ka.json
+++ b/locales/ka.json
@@ -107,7 +107,7 @@
     "ApproximateWaitingTime": "სავარაუდო ლოდინის დრო %s წუთი",
     "DetailsAsPdf": "დეტალები PDF ვერსიად",
     "CancelSalesRequest": "გამოძახების გაუქმება",
-    "WaitForSalesOrRequestInfo": "დაელოდეთ გაყიდვების მენეჯერს",
+    "WaitForSalesOrRequestInfo": "გაყიდვების მენეჯერი მოვა თქვენს მაგიდასთან, გთხოვთ დაელოდოთ",
     "name": "სახელი და გვარი",
     "phone": "ტელეფონის ნომერი",
     "SendCodeAgain": "ახლიდან გაგზავნა",
@@ -234,8 +234,8 @@
     "FrequentlyAskedQuestions": "ხშირად დასმული კითხვები",
     "ModelIndexPage": "ბინის შერჩევა იწყება აქ!",
     "FlatPagesTitle": "აირჩიეთ სასურველი %s შემოთავაზებული ვარიანტებიდან",
-    "renovationPageSubtitle": "რემონტის ფასი შედის ბინის ფასში და მისი არჩევა სავალდებულოა",
-    "flatPagesSubtitle": "%sს ფასი არ შედის ბინის ფასში და მისი არჩევა არასავალდებულოა",
+    "renovationPageSubtitle": "რემონტის ღირებულება შედის ბინის ღირებულებაში და მისი არჩევა სავალდებულოა",
+    "flatPagesSubtitle": "%sს ღირებულება არ შედის ბინის ღირებულებაში და მისი არჩევა არასავალდებულოა",
     "flatPagesModal": "გსურთ ამ ბინის შენახვა?"
   },
   "modal": {
