Make email field as optional. Redirect user to target page after registration. Edit static texts

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -154,7 +154,7 @@
     "building_progress": "მშენებლობის სტატუსი:",
     "bedrooms": "საძინებლები",
     "bedroom": "საძინებელი",
-    "balcony": "ვერანდა",
+    "balcony": "აივანი",
     "FlatEnglishPlural": "ბინა",
     "decoration": "დეკორი",
     "price": "ფასი",
@@ -162,7 +162,7 @@
     "appliancePrice": "ტექნიკის ფასი",
     "total_area": "სრული ფართი",
     "flat_area": "საცხოვრებელი",
-    "balcony_area": "ვერანდა",
+    "balcony_area": "აივანი",
     "flat_price": "ბინის ფასი",
     "furniture_price": "ავეჯის ფასი",
     "decoration_price": "დეკორის ფასი",
@@ -197,8 +197,8 @@
     "FavouriteFlats": "შერჩეული ბინები",
     "total_area": "სრული ფართი",
     "flat_area": "საცხოვრებელი",
-    "balcony_area": "ვერანდა",
-    "balcony_area_slash_terrace": "ვერანდა/ტერასა",
+    "balcony_area": "აივანი",
+    "balcony_area_slash_terrace": "აივანი/ტერასა",
     "ChooseYourSearchingMethod": "აირჩიე სასურველი ძიების მეთოდი",
     "PleaseSelectBlockFromRender": "გთხოვთ აირჩიოთ სასურველი ბლოკი",
     "PleaseSelectFloorFromRender": "გთხოვთ აირჩიოთ სასურველი სართული",
@@ -263,7 +263,7 @@
     "bedroom": "საძინებელი",
     "living_room": "მისაღები ოთახი",
     "hall": "ჰოლი",
-    "balcony": "ვერანდა",
+    "balcony": "აივანი",
     "kitchen": "სამზარეულო",
     "bathroom": "სააბაზანო",
     "wc": "სააბაზანო",
