started preset filter reset

--- a/locales/en.json
+++ b/locales/en.json
@@ -37,7 +37,9 @@
     "end_session_prompt": "Are you sure, that you want to end current session ?",
     "are_you_sure_question": "Are you sure, that you want to continue with this action ?",
     "continue": "Continue",
-    "cancel": "Cancel",
+		"cancel": "Cancel",
+    "FiltersWillBeClearedTitle": "Recomended filters by m²",
+    "FiltersWillBeClearedDescription": "If you change filter values, all the filters recommended by m² will be cleared",
     "yes": "YES",
     "no": "NO",
     "please_confirm_email": "Please confirm e-mail",
