--- a/locales/ka.json
+++ b/locales/ka.json
@@ -248,9 +248,11 @@
     "please_confirm_email": "გთხოვთ დაადასტუროთ ელ-ფოსტა",
     "send": "გაგზავნა",
     "successfulReservation": "თქვენ მიერ შერჩეული ბინა დაიჯავშნა",
+    "FiltersWillBeClearedTitle": "m²-ის რეკომენდაციის ფილტრები",
+    "FiltersWillBeClearedDescription": "იმ შემთხვევაში თუ შეცვლით ფილტრებს, m²-ის რეკომენდაციით მონიშნული ფილტრები გასუფთავდება",
     "failedReservation": "თქვენ მიერ შერჩეული ბინის დაჯავშნა ვერ მოხერხდა",
     "aboutFilterTitle": "ფილტრების შესახებ",
-    "aboutFilterDesc": "მონიშნული ფილტრები შევსებულია m2-ის რეკომენდაციით და მათი დაკორექტირება შეგეძლებათ სურვილისამებრ",
+    "aboutFilterDesc": "მონიშნული ფილტრები შევსებულია m²-ის რეკომენდაციით და მათი დაკორექტირება შეგეძლებათ სურვილისამებრ",
     "ok": "გასაგებია",
     "favouritesPageModal": "ნამდვილად გსურთ ამ ბინის წაშლა?",
     "sentSuccessfully": "თქვენი იმეილი წარმატებით გაიგზავნა",
