--- a/locales/ka.json
+++ b/locales/ka.json
@@ -284,7 +284,8 @@
   "descriptions": {
     "ModelIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m²-ის ახალი უბანი m³ საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>იპოვეთ თქვენი ბინა m²-ის ახალ უბანში - m³ საბურთალო.",
     "ModelMainIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m²-ის ახალი უბანი m³ საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>იპოვეთ თქვენი ბინა m²-ის ახალ უბანში - m³ საბურთალო.",
-    "flatPagesModal": "თუ თქვენ ბინას არ დაამატებთ ფავორიტებში ის ავტომატურად დაიკარგება"
+    "flatPagesModal": "თუ თქვენ ბინას არ დაამატებთ ფავორიტებში ის ავტომატურად დაიკარგება",
+    "aboutPaymentMethods": "გადახდის პირობებზე ინფორმაციის მისაღებად მიმართეთ გაყიდვების მენეჯერს"
   },
   "alerts": {
     "planshetColorAlert": "ამ ბინის სანახავად მიბრძადით მაკეტთან %s სივრცეში"
