fixed some bugs

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -99,7 +99,7 @@
     "desc": "მაქს-მინ",
     "IsSold": "გაყიდულია",
     "NoFlatsFound": "თქვენს მიერ მოთხოვნილი კატეგორიებით ვერცერთი ბინა ვერ მოიძებნა",
-    "FlatsLeftOnThisFloor": "ამ სართულზე გასაყიდია",
+    "FlatsLeftOnThisFloor": "ამ სართულზე გასაყიდია {count} ბინა",
     "SeeAllFlatsOnThisFloor": "ამ სართულზე გასაყიდი ყველა ბინა",
     "available": "გასაყიდია",
     "reserved": "დაჯავშნილი",
@@ -121,7 +121,7 @@
     "floorShort": "სარ.",
     "ongoing": "მიმდინარე",
     "LitUpAll": "გაანათე ყველა",
-    "FlatsLeftInThisBlock": "ამ ბლოკში გასაყიდია",
+		"FlatsLeftInThisBlock": "ამ ბლოკში გასაყიდია {count} ბინა",
     "address": "მისამართი",
     "Renovation": "რემონტი",
     "floor": "სართული",
