Fix: Replace static texts

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -61,7 +61,7 @@
     "home": "Home"
   },
   "home": {
-    "m3text": "m² წარმოდგინეთ ახალ უბანს m³ საბურთალო - ადგილს, სადაც თითოეული კუთხე შექმნილია თავისუფალი, კომფორტული და მრავალფეროვანი ცხოვრებისთვის",
+    "m3text": "m² წარმოგიდგენთ ახალ უბანს m³ საბურთალო - ადგილს, სადაც თითოეული კუთხე შექმნილია თავისუფალი, კომფორტული და მრავალფეროვანი ცხოვრებისთვის",
     "m3sub1": "შეარჩიეთ თქვენთვის სასურველი ბინა, რომელსაც მთელი უბანი მოჰყვება"
   },
   "about": {
@@ -209,12 +209,12 @@
     "ChooseSearchOption": "აირჩიეთ ძიების მეთოდი",
     "FlatPageTitleCinnamon": "რემონტი დარიჩინი",
     "FlatCardSubTitle": "ბინის საერთო ფართი %s² მეტრი",
-    "FillInPhoneNumber": "მიუთითე ტელეფონის ნომერი",
+    "FillInPhoneNumber": "მიუთითეთ ტელეფონის ნომერი",
     "BuildingProgress": "მშენებლობის სტატუსი",
     "PickFloorRange": "სართულის დიაპაზონი",
     "PickPriceRange": "ფასის დიაპაზონი",
     "PickAreaRange": "ფართის დიაპაზონი",
-    "FillInPhoneNumberSubTitle": "მიუთითე ნომერი, რომელიც უკვე რეგისტრირებულია",
+    "FillInPhoneNumberSubTitle": "მიუთითეთ ნომერი, რომელიც უკვე რეგისტრირებულია",
     "FlatPageTitleMuscat": "რემონტი მუსკატი",
     "YouWillRecieveCode": "კოდს მიიღებთ ტელეფონის ნომერზე",
     "CodeWasSentTo": "კოდი გამოგზავნილია ნომერზე: <span class=\"color-orange\">%s</span>",
@@ -282,8 +282,8 @@
     "m3_gelovani": "m³ საბურთალო"
   },
   "descriptions": {
-    "ModelIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m²-ის ახალი უბანი m³ საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>იპოვეთ თქვენი ბინა m²-ის ახალ უბანში - m³ საბურთალო.",
-    "ModelMainIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m²-ის ახალი უბანი m³ საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>იპოვეთ თქვენი ბინა m²-ის ახალ უბანში - m³ საბურთალო.",
+    "ModelIndexPage": "თქვენთვის სასურველი ბინის შესარჩევად მიჰყევით აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m²-ის ახალი უბანი m³ საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>იპოვეთ თქვენი ბინა m²-ის ახალ უბანში - m³ საბურთალო.",
+    "ModelMainIndexPage": "თქვენთვის სასურველი ბინის შესარჩევად მიჰყევით აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m²-ის ახალი უბანი m³ საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>იპოვეთ თქვენი ბინა m²-ის ახალ უბანში - m³ საბურთალო.",
     "flatPagesModal": "თუ თქვენ ბინას არ დაამატებთ ფავორიტებში ის ავტომატურად დაიკარგება",
     "aboutPaymentMethods": "გადახდის პირობებზე ინფორმაციის მისაღებად მიმართეთ გაყიდვების მენეჯერს"
   },
